clusters/rainbow/apps/proxy-rules/coder-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: coder
  namespace: apps
spec:
  type: ExternalName
  externalName: cyan.rainbow.tuckerthomas.com
  ports:
    - port: 9081
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: coder
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`coder.k8s.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: coder
          namespace: apps
          port: 9081
  tls:
    secretName: apps-cert-prod
    domains:
      - main: coder.k8s.tuckerthomas.com
