clusters/rainbow/apps/proxy-rules/foundryvtt-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt
  namespace: apps
spec:
  type: ExternalName
  externalName: 192.168.1.53
  ports:
    - port: 30000
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundryvtt
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vtt.k8s.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: foundryvtt
          namespace: apps
          port: 30000
  tls:
    secretName: apps-cert-prod
    domains:
      - main: vtt.k8s.tuckerthomas.com
---
apiVersion: v1
kind: Service
metadata:
  name: foundryvttpub
  namespace: apps
spec:
  type: ExternalName
  externalName: orange.rainbow.tuckerthomas.com
  ports:
    - port: 30000
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: foundryvttpub
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vtt2.k8s.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: foundryvttpub
          namespace: apps
          port: 30000
  tls:
    secretName: apps-cert-prod
    domains:
      - main: vtt2.k8s.tuckerthomas.com
