clusters/rainbow/apps/proxy-rules/jellyfin-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: apps
spec:
  type: ExternalName
  externalName: blue.rainbow.tuckerthomas.com
  ports:
    - port: 8096
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.k8s.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: jellyfin
          namespace: apps
          port: 8096
  tls:
    secretName: apps-cert-prod
    domains:
      - main: jellyfin.k8s.tuckerthomas.com
