clusters/rainbow/apps/proxy-rules/nzb-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzb
  namespace: apps
spec:
  type: ExternalName
  externalName: cyan.rainbow.tuckerthomas.com
  ports:
    - port: 1080
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzb
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nzb.k8s.tuckerthomas.com`)
      kind: Rule
      services:
        - kind: Service
          name: nzb
          namespace: apps
          port: 1080
  tls:
    secretName: apps-cert-prod
    domains:
      - main: nzb.k8s.tuckerthomas.com
